# backend/api/routes/tripCRUD.ts
@@ -40,11 +40,21 @@ router.post('/createTrip', async (req, res, next) => {
             return;
         }
 
+        // randomly generated permanent invite code for this trip
+        let inviteCode = null;
+        // ensure such code does not already exist for another trip (unlikely but might as well check)
+        while(inviteCode == null || tripCol.findOne({inviteCode: inviteCode}) !== null) {
+            // 000000 to 999999 as string padded with zeroes
+            let num = Math.floor(Math.random() * 1000000);
+            inviteCode = String(num).padStart(6, "0");
+        }
+
         const result = await tripCol.insertOne({
             name: req.body.name,
             notes: req.body.notes,
             memberIds: [],
-            leaderId: leaderId
+            leaderId: leaderId,
+            inviteCode: inviteCode
         });
 
         // And update the user object
