# backend/api/routes/userCRUD.ts
@@ -105,6 +105,42 @@ router.post("/forgotPassword", async (req, res) => {
     const email = req.body;
 
     await resetPasswordEmail(email);
+    res.status(200).json({message: "Password reset email sent"});
+});
+router.post("/joinTrip", async(req, res, next) => {
+    // check incoming params
+    if(!req.body.userId || !req.body.inviteCode) {
+        res.statusCode = 400;
+        res.json({error: 'userId + inviteCode required'});
+        return;
+    }
+    // NOTE: in the future, we may extract userId from the JWT
+    // for now, let's pass it manually to verify it works
+    const userId = ObjectId.createFromHexString(req.body.userId);
+
+    const client = await getMongoClient();
+    try {
+        const db = client.db(DB_NAME);
+        const userCol: Collection<User> = db.collection(USER_COLLECTION_NAME);
+        const tripCol: Collection<Trip> = db.collection(TRIP_COLLECTION_NAME);
+
+        // query the trip with this invite code (unique per trip)
+        const trip = await tripCol.findOne({inviteCode: req.body.inviteCode});
+        if(trip === null) {
+            res.statusCode = 400;
+            res.json({error: 'Invalid invite code'});
+            return;
+        }
+
+        // if found, add this user to the trip
+        await tripCol.updateOne({_id: trip._id}, { $push: { memberIds: userId }});
+        res.status(200).json({'message': 'Successfully joined the trip'});
+    }
+    finally {
+        await client.close();
+    }
+    next();
+    
 });
 router.get("/resetPassword/:token", async (req, res) => {
     // incoming email and new password
